Add ability to change password
