# application/backend/lib/api/Definitions.php
@@ -28,6 +28,13 @@ class FormLocationRegister {
     public $timings =           [Rule::ruleIsset => [],         Rule::ruleLongString => [168, 168]];
 }
 
+class FormChangePassword {
+    public $email =                 [Rule::ruleIsset => [],         Rule::ruleEmail => []];
+    public $passwordPrevious =      [Rule::ruleIsset => [],         Rule::rulePassword => []];
+    public $passwordNext =          [Rule::ruleIsset => [],         Rule::rulePassword => []];
+    public $passwordConfirmNext =   [Rule::ruleIsset => [],         Rule::rulePassword => []];
+}
+
 class SearchStrings {
     public $queries =           [Rule::ruleIsset => []];
 }
